# mila-compiler

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  grammar.txt
samples/: factorial.mila  factorialCycle.mila
src/main/: CMakeLists.txt  main.cpp
src/main/ast/: AST.cpp  AST.hpp  CodeGenerator.cpp  CodeGenerator.hpp  FuncHandler.cpp  FuncHandler.hpp
src/main/ast/visitor/: ASTNodeVisitor.hpp  CodeGenVisitor.cpp  CodeGenVisitor.hpp  CollectorVisitor.hpp  DefaultVisitor.cpp  DefaultVisitor.hpp  GenTypeVisitor.cpp  GenTypeVisitor.hpp  PrintVisitor.cpp  PrintVisitor.hpp  StoreVisitor.cpp  StoreVisitor.hpp
src/main/lexer/: Lexer.cpp  Lexer.hpp  Position.cpp  Position.hpp  Token.cpp  Token.hpp
src/main/parser/: Parser.cpp  Parser.hpp
src/main/ui/: SimpleConsoleView.cpp  SimpleConsoleView.hpp
src/main/utils/: Utils.cpp  Utils.hpp
src/test/: CMakeLists.txt  CodeGenTests.cpp  LexerTests.cpp  ParserTests.cpp  UtilsTests.cpp
